get data from api; use cn language;

--- a/www_pre/jade/app-account.jade
+++ b/www_pre/jade/app-account.jade
@@ -1,4 +1,4 @@
-ion-view(view-title='Account')
+ion-view(view-title='账户')
   ion-content
     ion-list.list-inset.padding-top
       ion-item.item-avatar.item-icon-right(ui-sref="app.me")
@@ -8,6 +8,6 @@ ion-view(view-title='Account')
         i.icon.ion-chevron-right.icon-accessory
     ion-list.list-inset
       ion-item.item-icon-left.item-icon-right(ui-sref="app.setting")
-        | Setting
+        | 设置
         i.icon.ion-gear-a
         i.icon.ion-chevron-right.icon-accessory
