--- a/www_pre/jade/setting.jade
+++ b/www_pre/jade/setting.jade
@@ -1,8 +1,8 @@
-ion-view(view-title='Setting')
+ion-view(view-title='设置')
   ion-content
     ion-list.list-inset.padding-top
       ion-item.item-icon-right(ng-click="changePassword()")
-        | Change Password
+        | 修改密码
         .icon.ion-chevron-right.icon-accessory
     label
-      button.button.button-block.button-calm(ng-click="logout()") Logout
+      button.button.button-block.button-calm(ng-click="logout()") 登出
