--- a/www_pre/jade/me.jade
+++ b/www_pre/jade/me.jade
@@ -1,15 +1,15 @@
-ion-view(view-title='Personal')
+ion-view(view-title='个人信息')
   ion-content
     ion-list.list-inset.padding-top
       ion-item.item-thumbnail-right.item-icon-right
         img(ng-src="{{user.avatar}}" style='margin-right:20px ')
         div(style="width:50px;position: absolute;top: 50%;transform: translateY(-50%);")
-          | Avatar
+          | 头像
         .icon.ion-chevron-right.icon-accessory.padding-left
     ion-list.list-inset
-      ion-item Name
+      ion-item 账户
         span.item-note {{user.name}}
       ion-item ID
         span.item-note {{user.id}}
-      ion-item Role
+      ion-item 角色
         span.item-note {{userRolesMap[user.userRoleId].name}}
