--- a/www_pre/jade/app-orders.jade
+++ b/www_pre/jade/app-orders.jade
@@ -8,26 +8,8 @@ ion-view(view-title='订单')
       label#search-input.item-input-wrapper
         i.icon.ion-search.placeholder-icon
         input(type='text', placeholder='Search', ng-model='query', ng-change='search()')
+    div(style="width:100%")
+      li.classify(ng-click="changePage(page)" ng-repeat="page in pages" ng-class="{active:page.id===curPageId}") {{page.title}}
     ion-refresher(pulling-text=' ', on-refresh='doRefresh()')
-    ion-list
-      div(style="width:100%")
-        li.classify(ng-click="") 全部订单
-        li.classify.active(ng-click="") 未完成订单
-        li.classify(ng-click="") 已完成订单
-      ion-item.item-remove-animate.item-icon-right(ng-repeat='order in orders', type='item-text-wrap', href='#/app/orders/{{chat.id}}',style="min-height:72px;")
-        img(ng-src='img/unfinish.png' style="max-width:8px;max-height:72px;width: 100%;height: 100%;" )
-        img(ng-src='{{chat.face}}' style="max-height:72px;margin:0px 6px")
-        .intro(style="display:inline-block")
-          h2(style="color:#3191fd")  
-            span(ng-if="order.orderStatusId!=='F'" style="color:#ff4343")
-              | {{order.address}} {{order.parterNo}}
-          p(style="height:30px") 
-            span {{_.round(order.count)}}件
-            span {{_.round(order.volume, 2)}}方
-            span {{_.round(order.weight,2)}}kg
-            br
-            span {{order.warehouseReceptNo}} {{order.parterNo}} 
-          span(style="color:#a6a6a6;font-size:80%") {{order.updatedAt|date:'yyyy-MM-dd hh:mm'}}
-        i.icon.ion-chevron-right.icon-accessory
-        ion-option-button.button-assertive(ng-click='remove(chat)')
-          | Delete
+    ng-include(src="pagesMap[curPageId].url")
+    ion-infinite-scroll(on-infinite='loadMore()', ng-if='hasMore[curPageId]', distance='10%')
