--- a/www_pre/jade/modal-changePassword.jade
+++ b/www_pre/jade/modal-changePassword.jade
@@ -9,8 +9,8 @@ ion-modal-view
         .item.item-input.item-stacked-label(ng-class="{'has-error':userForm.oldPassord.$invalid && !userForm.oldPassord.$pristine}")
           //span.input-label 旧密码
           input(name='oldPassord',placeholder="请输入原始密码", type='password', value='' ng-model='formData.oldPassword' required ng-minlength="6" ng-maxlength="12" ng-change='clearPasswordError()')
-          span.energized(ng-show="userForm.oldPassord.$error.minlength && !userForm.oldPassord.$pristine") Less than 6
-          span.energized(ng-show="userForm.oldPassord.$error.maxlength && !userForm.oldPassord.$pristine") More than 12
+          span.energized(ng-show="userForm.oldPassord.$error.minlength && !userForm.oldPassord.$pristine") 少于6位
+          span.energized(ng-show="userForm.oldPassord.$error.maxlength && !userForm.oldPassord.$pristine") 多于12位
         .item.item-input.item-stacked-label(ng-class="{'has-error':userForm.password.$invalid && !userForm.password.$pristine}")
           //span.input-label 新密码
           input(name='password', placeholder="请输入新密码", type='password', value='' ng-model='formData.password' required ng-minlength="6" ng-maxlength="12")
