--- a/www_pre/jade/orders-all.jade
+++ b/www_pre/jade/orders-all.jade
@@ -1,11 +1,13 @@
 ion-list
+  .empty(ng-if='refreshStatus["All"]==="done" && allOrders.length===0') 
+    img(ng-src='img/empty.png')
+    p 没有订单
   ion-item.item-remove-animate.item-icon-right.orderList.orderAll(ng-repeat='order in allOrders', type='item-text-wrap', href='#/app/orders/{{order.id}}')
-    img.status(ng-src='img/unfinish.png')
+    .statu(ng-class="{'unfinish':order.orderStatusId!=='F'}") 
+    //img.status(ng-src='img/unfinish.png')
     img.orderImg(ng-src='img/orderImg.jpg')
     .intro
-      h3  
-        span.unfinish(ng-if="order.orderStatusId!=='F'") 
-          | [未完成]
+      h3(ng-class="{'unfinish':order.orderStatusId!=='F'}")   
         {{order.address}} {{order.parterNo}}
       p
         span 
@@ -13,6 +15,6 @@ ion-list
           | {{_.round(order.volume, 2)}}方
           | {{_.round(order.weight,2)}}kg
         br
-        span {{order.warehouseReceptNo}} {{order.parterNo}} 
-      span.date {{order.updatedAt|date:'yyyy-MM-dd hh:mm'}}
+        span {{order.warehouseReceptNo}} 
+      span.date {{order.orderDt|date:'yyyy-MM-dd'}}
     i.icon.ion-chevron-right.icon-accessory
