--- a/www_pre/jade/orders-d.jade
+++ b/www_pre/jade/orders-d.jade
@@ -1,17 +1,19 @@
 ion-list
+  .empty(ng-if='refreshStatus["D"]==="done" && dOrders.length==0') 
+    img(ng-src='img/empty.png')
+    p 没有未完成订单
   ion-item.item-remove-animate.item-icon-right.orderList.orderD(ng-repeat='order in dOrders', type='item-text-wrap', href='#/app/orders/{{order.id}}')
-    img.status(ng-src='img/unfinish.png' )
+    .statu(ng-class="{'unfinish':order.orderStatusId!=='F'}") 
     img.orderImg(ng-src='img/orderImg.jpg')
     .intro
-      h3 
-        span.unfinish(ng-if="order.orderStatusId!=='F'")
-          | {{order.address}} {{order.parterNo}}
+      h3(ng-class="{'unfinish':order.orderStatusId!=='F'}")  
+        | {{order.address}} {{order.parterNo}}
       p 
         span 
           | {{_.round(order.count)}}件
           | {{_.round(order.volume, 2)}}方
           | {{_.round(order.weight,2)}}kg
         br
-        span {{order.warehouseReceptNo}} {{order.parterNo}} 
-      span {{order.updatedAt|date:'yyyy-MM-dd hh:mm'}}
+        span {{order.warehouseReceptNo}}
+      span.date {{order.orderDt|date:'yyyy-MM-dd'}}
     i.icon.ion-chevron-right.icon-accessory
