--- a/www/css/style.css
+++ b/www/css/style.css
@@ -24,8 +24,19 @@
 	width: 100%;
 	height: 100%;
 }
-
+/*sub-header*/
+.bar-search.bar-subheader{
+	background:#fff;
+	padding: 0;	
+	height: 80;
+}
+.has-subheader {
+	top:124px;
+}
 /*Order*/
+.orderList:first-child{
+	border-top: 0px;
+}
 .orderList{
 	min-height:76px;
 }
@@ -37,13 +48,14 @@
 	width:1%;
 	height:76px;
 	background-color:#e5e5e5;
+	margin:-4px 0px;
 }
 .statu.unfinish{
 	background-color:#ff4343;
 }
 img.orderImg{
   max-height:76px;
-  margin:0px 6px
+  margin:-4px 6px
 }
 .intro{
 	display:inline-block;
